--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,37 @@
-/*  your css code here. If applicable */
+:root {
+      background-color: rgb(135, 206, 235);
+    }
+
+    /* 2. Article Paragraph Styling */
+    article p:first-child {
+      color: white;
+      background-color: black;
+    }
+
+    article p:nth-child(2) {
+      /* default text color, no extra styling needed */
+    }
+
+    article p:last-child {
+      color: red;
+    }
+
+    /* 3. Unordered List Styling */
+    ul li {
+      background-color: gray;
+      width: 50%;
+      padding: 10px;
+    }
+
+    ul li:nth-child(odd) {
+      background-color: white;
+    }
+
+    ul li:first-child,
+    ul li:last-child {
+      font-size: 22px;
+    }
+
+    ul li:nth-last-child(3) {
+      background-color: pink;
+    }
